--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -330,5 +330,6 @@
     <string name="seconds_before_playback">Seconds to decode before starting the playback:</string>
     <string name="second">second</string>
     <string name="seconds">seconds</string>
+    <string name="slide">Slide</string>
 
 </resources>
