--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -330,5 +330,6 @@
     <string name="second">segundo</string>
     <string name="seconds">segundos</string>
     <string name="slide">Deslizar</string>
+    <string name="play_with_long_press">Usar um toque longo para iniciar a reprodução ao adicionar músicas</string>
 
 </resources>
