--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -330,5 +330,6 @@
     <string name="second">segundo</string>
     <string name="seconds">segundos</string>
     <string name="slide">Deslizar</string>
+    <string name="play_with_long_press">Use un toque largo para comenzar la reproducción al añadir canciones</string>
 
 </resources>
