--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -330,5 +330,6 @@
     <string name="second">seconde</string>
     <string name="seconds">secondes</string>
     <string name="slide">Glisser</string>
+    <string name="play_with_long_press">Utilisez une longue touche pour démarrer la lecture lors de l\'ajout de morceaux</string>
 
 </resources>
