--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -331,5 +331,6 @@
     <string name="second">second</string>
     <string name="seconds">seconds</string>
     <string name="slide">Slide</string>
+    <string name="play_with_long_press">Use a long press to play music when adding songs</string>
 
 </resources>
