--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -331,5 +331,7 @@
     <string name="seconds">секунды</string>
     <string name="slide">Скользить</string>
     <string name="play_with_long_press">Длительное нажатие начинает воспроизведение при добавлении песни</string>
+    <string name="smooth">Гладкий</string>
+    <string name="transition_popup">Переход (Меню):</string>
 
 </resources>
