--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -331,5 +331,7 @@
     <string name="seconds">секунди</string>
     <string name="slide">Ковзати</string>
     <string name="play_with_long_press">Тривале натискання починає відтворення при додаванні пісні</string>
+    <string name="smooth">Плавний</string>
+    <string name="transition_popup">Перехід (Меню):</string>
 
 </resources>
