--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -331,5 +331,7 @@
     <string name="seconds">secondes</string>
     <string name="slide">Glisser</string>
     <string name="play_with_long_press">Utilisez une longue touche pour démarrer la lecture lors de l\'ajout de morceaux</string>
+    <string name="smooth">Lisse</string>
+    <string name="transition_popup">Transition (Menu) :</string>
 
 </resources>
