Added a new color theme and made minor changes to the UI

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -333,5 +333,6 @@
     <string name="play_with_long_press">Ein langer Druck beginnt mit der Wiedergabe, wenn Lieder hinzufügen</string>
     <string name="smooth">Glatt</string>
     <string name="transition_popup">Übergang (Menü):</string>
+    <string name="dark">Dunkel</string>
 
 </resources>
