--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -334,5 +334,6 @@
     <string name="play_with_long_press">Use a long press to play music when adding songs</string>
     <string name="smooth">Smooth</string>
     <string name="transition_popup">Transition (Menu):</string>
+    <string name="dark">Dark</string>
 
 </resources>
