--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -333,5 +333,6 @@
     <string name="play_with_long_press">Use un toque largo para comenzar la reproducción al añadir canciones</string>
     <string name="smooth">Suave</string>
     <string name="transition_popup">Transición (Menú):</string>
+    <string name="dark">Oscuro</string>
 
 </resources>
