--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -333,5 +333,6 @@
     <string name="play_with_long_press">Usar um toque longo para iniciar a reprodução ao adicionar músicas</string>
     <string name="smooth">Suave</string>
     <string name="transition_popup">Transição (Menu):</string>
+    <string name="dark">Escuro</string>
 
 </resources>
