--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -334,5 +334,9 @@
     <string name="smooth">Suave</string>
     <string name="transition_popup">Transição (Menu):</string>
     <string name="dark">Escuro</string>
+    <string name="disable_external_fx">Desabilitar efeitos externos</string>
+    <string name="enable_external_fx">Habilitar efeitos externos</string>
+    <string name="display_external_fx">Mostrar efeitos externos&#8230;</string>
+    <string name="external_fx_warning">Aviso: se nada acontecer quando você clicar no botão acima, provavelmente, seu dispositivo não suporta efeitos externos</string>
 
 </resources>
