--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -326,6 +326,8 @@
     <string name="connecting">Conectando…</string>
     <string name="bytes_before_decoding">Bytes para descargar antes de comenzar a decodificar:</string>
     <string name="seconds_before_playback">Segundos para decodificar antes de iniciar la reproducción:</string>
+    <string name="playback_buffer_length">Tamaño del buffer de reproducción (un valor grande trae más estabilidad, pero provoca un retraso al cambiar los efectos):</string>
+    <string name="percentage_to_decode_before_playback">Porcentaje de decodificar antes de iniciar la reproducción:</string>
     <string name="second">segundo</string>
     <string name="seconds">segundos</string>
     <string name="slide">Deslizar</string>
