--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -326,6 +326,8 @@
     <string name="connecting">Підключення…</string>
     <string name="bytes_before_decoding">Почати декодування після завантаження скільки байт:</string>
     <string name="seconds_before_playback">Початок відтворення через декодування скільки секунд:</string>
+    <string name="playback_buffer_length">Розмір буфера відтворення (велике значення приносить стабільність, але викликає затримку при зміні ефектів):</string>
+    <string name="percentage_to_decode_before_playback">Відсоток для декодування перед початком відтворення:</string>
     <string name="second">секунда</string>
     <string name="seconds">секунди</string>
     <string name="slide">Ковзати</string>
