--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -327,6 +327,8 @@
     <string name="connecting">Connecting…</string>
     <string name="bytes_before_decoding">Bytes to download before starting to decode:</string>
     <string name="seconds_before_playback">Seconds to decode before starting the playback:</string>
+    <string name="playback_buffer_length">Size of the playback buffer (a large value brings more stability but causes a delay when changing the effects):</string>
+    <string name="percentage_to_decode_before_playback">Percentage to decode before starting the playback:</string>
     <string name="second">second</string>
     <string name="seconds">seconds</string>
     <string name="slide">Slide</string>
