--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -328,6 +328,8 @@
     <string name="seconds_before_playback">Початок відтворення через декодування скільки секунд:</string>
     <string name="playback_buffer_length">Розмір буфера відтворення (велике значення приносить стабільність, але викликає затримку при зміні ефектів):</string>
     <string name="percentage_to_decode_before_playback">Відсоток для декодування перед початком відтворення:</string>
+    <string name="agc">Автоматичне регулювання посилення</string>
+    <string name="current_gain">Поточна прибуток:</string>
     <string name="second">секунда</string>
     <string name="seconds">секунди</string>
     <string name="slide">Ковзати</string>
