--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -339,5 +339,6 @@
     <string name="dark">Темний</string>
     <string name="enable_external_fx">Увімкніть зовнішні ефекти</string>
     <string name="external_fx_warning">(Дезактивація може зайняти деякий час)</string>
+    <string name="use_audiotrack_engine">Використовуйте AudioTrack двигун (потрібно перезапуск програвача і повинен бути обраний тільки, якщо ви відчуваєте проблеми з відтворенням)</string>
 
 </resources>
