--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -339,6 +339,6 @@
     <string name="dark">Темный</string>
     <string name="enable_external_fx">Включите внешние эффекты</string>
     <string name="external_fx_warning">(Дезактивация может занять некоторое время)</string>
-    <string name="use_audiotrack_engine">Используйте AudioTrack двигатель (требуется перезапуск проигрывателя и должен быть выбран только, если вы испытываете проблемы с воспроизведением)</string>
+    <string name="playback_engine">Воспроизведение двигателя (необходимо перезапустить проигрыватель для того, чтобы изменения вступили в силу):</string>
 
 </resources>
