Adding a new build flavor: FPlay X (praying God this attempt to improve AudioTrack's and OpenSL's behavior works + adding a handler for moments when AudioTrack creation fails due to a large buffer size + fixing the code that changes the cursor colors + changing the traditional setDataSource() that used to fail spuriously with a file not found error on a few devices)

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -171,6 +171,7 @@
     <string name="error_server_died">Tut mir leid! Der Medienserver hat während der Wiedergabe plötzlich nicht mehr reagiert :(</string>
     <string name="error_security">Tut mir leid! Ein Sicherheitsproblem ist aufgetreten :(</string>
     <string name="error_unsupported_format">Tut mir leid! Diese Audiocodec wird nicht unterstützt! :(</string>
+    <string name="error_try_smaller_buffer">Tut mir leid! Out of memory! Versuchen Sie, die Größe des Wiedergabepuffer zu reduzieren :(</string>
     <string name="coming_soon">Kommt bald&#8230; ;)</string>
     <string name="blue_orange">Blau/Orange</string>
     <string name="blue">Blau</string>
