Fixed stream reception in traditional (now INFO_OUTPUT_FORMAT_CHANGED is being properly handled even in traditional) and added a notice about the recommended buffer size

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -341,5 +341,6 @@
     <string name="enable_external_fx">Activar efectos externos</string>
     <string name="external_fx_warning">(La desactivación puede tomar algún tiempo)</string>
     <string name="playback_engine">Motor de reproducción (debe reiniciar el reproductor para que los cambios surtan efecto):</string>
+    <string name="recommended">recomendado</string>
 
 </resources>
