--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -341,5 +341,6 @@
     <string name="enable_external_fx">Aktivieren Sie externe Effekte</string>
     <string name="external_fx_warning">(Die Deaktivierung kann einige Zeit dauern)</string>
     <string name="playback_engine">Wiedergabe-Engine (Sie müssen den Player neu starten, damit die Änderungen wirksam werden):</string>
+    <string name="recommended">empfohlen</string>
 
 </resources>
