--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -341,5 +341,6 @@
     <string name="enable_external_fx">Увімкніть зовнішні ефекти</string>
     <string name="external_fx_warning">(Дезактивація може зайняти деякий час)</string>
     <string name="playback_engine">Відтворення двигуна (необхідно перезапустити програвач для того, щоб зміни вступили в силу):</string>
+    <string name="recommended">рекомендований</string>
 
 </resources>
